<resources>
    <string name="app_name">Contacts List</string>

    <string name="name">Name: %s</string>
    <string name="email">E-mail:&#160;</string>
    <string name="active">active</string>
    <string name="YO">%d y.o.</string>
    <string name="phone">Phone:&#160;</string>
    <string name="company">Company: %s</string>
    <string name="eyeColor">Eye color:</string>
    <string name="favoriteFruit">Favorite fruit:</string>
    <string name="location">Location:&#160;</string>
    <string name="registered">Registered at %s</string>
    <string name="about">About: %s</string>
    <string name="friends">Friends :</string>

    <string name="reload_cache">reload_cache</string>

</resources>
